updates as at 02/25/2020 v1

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -47,6 +47,7 @@
     </error-page>
     <context-param>
         <param-name>primefaces.THEME</param-name>
-        <param-value>bootstrap</param-value>
+        <param-value>excite-bike</param-value>
     </context-param>
+    <!--start | cupertino | excite-bike-->
 </web-app>
